# legged_wheeled

./: CMakeLists.txt  README.md
Utilities/include/: RobotCommData.h  SharedMemory.h  SharedMemoryInterface.h
config/: parameters.yaml
controller/: CMakeLists.txt  main.cpp
controller/include/: ControlData.h  RobotController.h  RobotModel.h
controller/src/: ControlData.cpp  RobotController.cpp  RobotModel.cpp  Trajectory.cpp
data/: 10degree_slope.txt  20degree_slope.txt  25degree_slope.txt  30degree_slope.txt  35degree_slope.txt  40degree_slope.txt  plotData.m
robot_model/leggedWheel_urdf_v2/: CMakeLists.txt  package.xml
robot_model/leggedWheel_urdf_v2/launch/: display.launch  gazebo.launch
robot_model/leggedWheel_urdf_v2/meshes/: left_back_abad.STL  left_back_hip.STL  left_back_knee.STL  left_front_abad.STL  left_front_hip.STL  left_front_knee.STL  right_back_hip.STL  right_back_knee.STL  right_front_abad.STL  right_front_hip.STL  right_front_knee.STL
robot_model/leggedWheel_urdf_v2/urdf/: leggedWheel_urdf_v2.csv  leggedWheel_urdf_v2.urdf
robot_model/leggedWheel_urdf_v3/: CMakeLists.txt  package.xml
robot_model/leggedWheel_urdf_v3/config/: joint_names_leggedWheel_urdf_v3.yaml
robot_model/leggedWheel_urdf_v3/launch/: display.launch  gazebo.launch
robot_model/leggedWheel_urdf_v3/meshes/: left_back_hip.STL  left_back_knee.STL  left_front_hip.STL  left_front_knee.STL  (+6 more)
robot_model/urdf_v1/: CMakeLists.txt  package.xml
robot_model/xml_v1/: urdf_v1.urdf  urdf_v1.xml
sim/: CMakeLists.txt  simulate.cpp
user/: UserInterface.cpp  UserInterface.h
(+29 files in other folders)
